--- a/SimplifiedChinese.lng
+++ b/SimplifiedChinese.lng
@@ -1,7 +1,7 @@
-﻿2012-04-13 01:23|~LANGUAGENAME|
+﻿2012-08-27 01:24|~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.23|
+|1.24|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ C&D|
 |~LANGUAGEAUTHOREMAIL|
@@ -1002,8 +1002,6 @@
 |目前已是最新版。|
 |Connect failed, cannot check for updates.|
 |连接失败，无法检查升级。|
-|Cache error (cannot open cached file).|
-|缓存错误（无法打开缓存文件）。|
 |1 update is available!|
 |已有1个可用更新！|
 |%u updates are available!|
@@ -1322,3 +1320,5 @@
 |确保在自动输入中保持同样的键盘布局|
 |{PARAM} more entries|
 |{PARAM} 条未显示记录|
+|The database is empty|
+|数据库是空的|
